{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7dc812d5-66bb-4f84-9661-4c9a07aa9c8e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2125e221-5bb7-4cb8-825f-a22878df43a2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f1e2500e-fdee-4666-8702-f4d8db3abd57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "c49e43a8-4ebf-4705-b0b1-76f6121127d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b9e19c5-c387-45ec-be7d-29897d501b31",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a9586dd-969a-4d6f-a651-dddfa1066daa",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e908c24a-0c19-40bc-9060-b4d013757f1a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15d2aefb-2088-4739-81f5-cfca5101812f",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "XboxController",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "433e8ca4-da32-40ed-ae1c-a847e684faa4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5e69db07-d093-4127-8ba8-25cae7b6c43e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "81ded819-b396-4c41-a9ba-528f8c1c1c3f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "69d143f8-480f-486f-8d04-87851a61005d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6f64a64d-fb8e-4dee-9623-3851ab3c80c6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "088e380e-37e0-4c0f-8d3a-721f8662d11f",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "XboxController",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XboxController",
            "bindingGroup": "XboxController",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}